<resources>
    <string name="app_name">Limitless</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_mpas_acrivity">MpasAcrivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pin">Pin</string>
    <string name="btn_confirm">confirm</string>
    <string name="view_all">View all</string>
    <string name="please_wait">Please Wait...</string>
    <string name="please_click_back_again_to_exit">" Please click back again to exit."</string>
    <string name="title_bundles">Bundles</string>

    <string name="add_to_cart_label">Add to Cart</string>
    <string name="offers_title">Offers</string>
    <string name="view_all_label">View all</string>
    <string name="home_search">What are you looking for?</string>
    <string name="tv_category">Shop By Category</string>
    <string name="expend_more">Expend more</string>
    <string name="price"><strike>60 EGP</strike></string>
    <string name="other_products">You may also like</string>
    <string name="order_history">Order History</string>

    <string name="login_signup">Login or Signup using your mobile no.</string>


    <string name="product_description_label">Product Description</string>
    <string name="similar_products_label">Similar Products</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="forms_label">Forms</string>
    <string name="concentrations_label">Concentrations</string>
    <string name="indication_uses_label">Indication uses</string>
    <string name="doses_label">doses</string>
    <string name="drug_interaction_label">Drug interaction</string>
    <string name="storage_label">Storage</string>
    <string name="product_description_bottom_sheet_tag">Product Description Bottom Sheet</string>
    <string name="no_cart_text_1">Your cart is empty</string>
    <string name="no_cart_text_2">Looks like you haven’t added anything to your cart yet.</string>
    <string name="explore_our_products">Explore our products</string>
    <string name="monthly_subscription">Monthly subscription</string>
    <string name="cart_sub_text">The product will be sent monthly starting from the date of receipt of the order.</string>
    <string name="promo_code">Promo Code</string>
    <string name="summary_payment">Summary Payment</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="cancel_sub_text">Are you sure you want to cancel this item from your cart?</string>
    <string name="promo_hint">Enter Promo code here</string>
    <string name="keep_me_subscribed">Keep me subscribed</string>
    <string name="sure">Sure</string>
    <string name="delete_carts_text">Are you sure want to clear all items from your cart?</string>
    <string name="delete_carts_title">Remove item?</string>
    <string name="no_thanks">No, thanks</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="home_tab_title">Home</string>
    <string name="health_tab_title">Health</string>
    <string name="cart_tab_title">Cart</string>
    <string name="account_tab_title">Account</string>
    <string name="detect_your_location_as_label">detect your location</string>
    <string name="bundles_label">Bundles</string>
    <string name="product_details_title">Product Details</string>
    <string name="product_description_title">Product Description</string>
    <string name="added_to_cart_label">Added to cart</string>
    <string name="summary">Summary</string>
    <string name="_3">3</string>
    <string name="payment">Payment</string>
    <string name="_2">2</string>
    <string name="shipping">Shipping</string>
    <string name="_1">1</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="add_new_card">Add new card</string>
    <string name="cancel">Cancel</string>
    <string name="holder_name">Holder name*</string>
    <string name="card_num">XXXX XXXX XXXX XXXX</string>
    <string name="card_number">Card number*</string>
    <string name="expire_date">Expire date*</string>
    <string name="cvv">CVV*</string>
    <string name="cvv_text">3–4 digits</string>
    <string name="save_the_card">Save the card</string>
    <string name="security_message">Industry leading encryption hardware and software methods and security protocols to protect customer information.</string>
    <string name="add_card">Add Card</string>
    <string name="hint_name">John</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="continue_to_summary">Continue to summary</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card_not_supported">We do not currently support credit card</string>
    <string name="no_saved_cards">No saved cards</string>
    <string name="no_card_message">When you have cards, you\'ll see them here.</string>
    <string name="ok">OK</string>
    <string name="address_key">address_key</string>
    <string name="carousel1_label">Buy 1 Get 20% off second</string>
    <string name="carousel2_label">20% off</string>
    <string name="carousel3_label">Buy 1 Get 1 Free</string>
    <string name="delivery_method_label">Delivery Method</string>
    <string name="continue_to_payment_label">Continue to payment</string>
    <string name="empty_addresses_caption">When you have addresses, you will see them here.</string>
    <string name="add_new_address_label">Add New Address</string>
    <string name="cancel_label">Cancel</string>
    <string name="address_name_label">Address name*</string>
    <string name="address_name_hint">home, office</string>
    <string name="address_label">Address*</string>
    <string name="building_number_label">Building number*</string>
    <string name="address_hint">Address</string>
    <string name="building_number_hint">ex. 11</string>
    <string name="floor_number_label">Floor number*</string>
    <string name="floor_number_hint">ex. 1</string>
    <string name="apartment_number_label">Apartment number*</string>
    <string name="apartment_number_hint">ex. 23</string>
    <string name="mobile_number_label">Mobile number*</string>
    <string name="save_as_a_default_address_label">Save as a default address</string>
    <string name="save_address_label">Save Address</string>
    <string name="location_permission_request_message">Turn on Location Service. This allows limitless app to determine you location</string>
    <string name="empty_field_err_message">Please fill all fields!</string>
    <string name="city_label">City</string>
    <string name="city_hint">Cairo, Giza</string>
    <string name="area_label">Area</string>
    <string name="area_hint">El Haram</string>
    <string name="street_label">Address</string>
    <string name="address_adding_failure_message">Address is not added, try again</string>
    <string name="no_saved_addresses_label">No Saved Addresses</string>
    <string name="street_name_label">Address..</string>
    <string name="detect_my_location_label">Detect my location</string>
    <string name="code_hint">- - - - - -</string>
    <string name="change">Change</string>
    <string name="apply">Apply</string>
    <string name="order_summary">Order Summary</string>
    <string name="lbl_subtotal">subtotal</string>
    <string name="lbl_shipping_charge">shipping charge</string>
    <string name="total_amount">total amount</string>
    <string name="shipping_to">Shipping to</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="cash_on_delivery_label">Cash On Delivery</string>
    <string name="place_order">Place Order</string>
    <string name="order_placed_text1">Your order successfully placed</string>
    <string name="order_placed_text2">Your order is now complete and is processing review your items</string>
    <string name="continue_shipping">Continue Shipping</string>
    <string name="cart">Cart</string>
    <string name="no_orders">No Orders</string>
    <string name="no_order_text">When you do. their status will appear here.</string>
    <string name="health_text1">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="health_text2">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lisa_barnes">Lisa Barnes</string>
    <string name="by">by</string>
    <string name="proudect_details_sub_text1">Buy the product monthly and you will get a 10% discount on the value of the product.</string>
    <string name="subscribe_now">Subscribe Now</string>


</resources>