<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cart.deleteCart.DeleteCartFragment"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_carts_title"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/font_lg"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_carts_text"
        android:textSize="@dimen/font_md"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="@dimen/_12sdp"
        />

    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/checkout_shape"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/font_md"
        android:id="@+id/btn_delete_carts"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_thanks"
        android:textColor="@color/green"
        android:textSize="@dimen/font_md"
        android:id="@+id/btn_cancel_delete_carts"
        android:layout_marginBottom="@dimen/_12sdp"
        />



</LinearLayout>