<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cart.cancelsub.CancelSubscriptionFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/rounded_bottom_sheet"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle"
        android:layout_marginTop="@dimen/_12sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_subscription"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/font_lg"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_sub_text"
        android:textSize="@dimen/font_md"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="@dimen/_12sdp"
        />

    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/checkout_shape"
        android:text="@string/keep_me_subscribed"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/font_md"
        android:id="@+id/btn_keep_sub"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_subscription"
        android:textColor="@color/green"
        android:textSize="@dimen/font_md"
        android:id="@+id/confirm_cancel"
        android:layout_marginBottom="@dimen/_12sdp"
        />

</LinearLayout>