<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".presentation.checkout.CheckoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/checkout_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/checkout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/checkout"
                android:textColor="@color/black"
                android:textSize="@dimen/font_lg" />

        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/first_process"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/uncompleted_process"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/font_md"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/second_process"
            app:layout_constraintTop_toBottomOf="@id/checkout_toolbar" />

        <TextView
            android:id="@+id/shipping_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/shipping"
            android:textAlignment="center"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/font_md"
            app:layout_constraintLeft_toLeftOf="@id/first_process"
            app:layout_constraintRight_toRightOf="@id/first_process"
            app:layout_constraintTop_toBottomOf="@id/first_process" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/first_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:dividerColor="@color/grey_700"
            app:layout_constraintBottom_toBottomOf="@id/first_process"
            app:layout_constraintLeft_toRightOf="@id/first_process"
            app:layout_constraintRight_toLeftOf="@id/second_process"
            app:layout_constraintTop_toTopOf="@id/first_process" />

        <TextView
            android:id="@+id/second_process"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/uncompleted_process"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/font_md"
            app:layout_constraintLeft_toRightOf="@id/first_process"
            app:layout_constraintRight_toLeftOf="@id/third_process"
            app:layout_constraintTop_toBottomOf="@id/checkout_toolbar" />

        <TextView
            android:id="@+id/payment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/payment"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/font_md"
            app:layout_constraintBottom_toBottomOf="@id/shipping_text"
            app:layout_constraintLeft_toLeftOf="@id/second_process"
            app:layout_constraintRight_toRightOf="@id/second_process"
            app:layout_constraintTop_toTopOf="@id/shipping_text" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/second_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:dividerColor="@color/grey_700"
            app:layout_constraintBottom_toBottomOf="@id/first_process"
            app:layout_constraintLeft_toRightOf="@id/second_process"
            app:layout_constraintRight_toLeftOf="@id/third_process"
            app:layout_constraintTop_toTopOf="@id/first_process" />


        <TextView
            android:id="@+id/third_process"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/uncompleted_process"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/font_md"
            app:layout_constraintLeft_toRightOf="@id/second_process"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkout_toolbar" />

        <TextView
            android:id="@+id/summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/summary"
            android:textAlignment="center"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/font_md"
            app:layout_constraintBottom_toBottomOf="@id/shipping_text"
            app:layout_constraintLeft_toLeftOf="@id/third_process"
            app:layout_constraintRight_toRightOf="@id/third_process"
            app:layout_constraintTop_toTopOf="@id/shipping_text" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/checkoutFragmentContainer"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_12sdp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shipping_text"
            app:navGraph="@navigation/checkout_nav_graph"
            tools:layout_editor_absoluteX="1dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>