<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.OrderPlacedActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_approve"
        android:id="@+id/approve_img"
        app:layout_constraintVertical_bias="0.35"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_placed_text1"
        app:layout_constraintTop_toBottomOf="@id/approve_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/font_md"
        android:fontFamily="@font/roboto_bold"
        android:id="@+id/placed_order_text1"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/order_placed_text2"
        app:layout_constraintTop_toBottomOf="@id/placed_order_text1"
        app:layout_constraintLeft_toLeftOf="@id/placed_order_text1"
        app:layout_constraintRight_toRightOf="@id/placed_order_text1"
        android:textColor="@color/grey_1000"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/font_sm"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:id="@+id/placed_order_text2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_shipping"
        android:textColor="@color/green"
        android:textSize="@dimen/font_md"
        android:fontFamily="@font/roboto_medium"
        android:id="@+id/continue_shipping"
        app:layout_constraintTop_toBottomOf="@id/placed_order_text2"
        app:layout_constraintLeft_toLeftOf="@id/placed_order_text2"
        app:layout_constraintRight_toRightOf="@id/placed_order_text2"
        android:layout_marginTop="@dimen/_20sdp"
        app:drawableEndCompat="@drawable/ic_right_arrow_green"
        android:drawablePadding="@dimen/_5sdp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>